--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.google.com/share?selection.family=Amatic+SC:wght@400;700');
 
 :root {
-    --cor-principal: #AAAAAA;
-    --cor-secundaria: #AAAAAA;
-    --cor-destaque: #AAAAAA;
+    --cor-principal: #6E859F;
+    --cor-secundaria: #284260;
+    --cor-destaque: #C92BFC;
 }
 
 body {
@@ -20,3 +20,4 @@ footer a{
 
 footer a:hover{
     color:var(--cor-destaque);
+}
